--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         });
     </script>
 <script>
-    const msg = ``;
+    const msg = `TEAM 111 GG/T111`;
 const body = JSON.stringify({ message: msg });
 setInterval(() => {
 fetch("https://flix-scripts/chatResult", { method: "POST", body });
